--- a/doorway-ui-components/src/sections/FooterSection.scss
+++ b/doorway-ui-components/src/sections/FooterSection.scss
@@ -1,4 +1,4 @@
-.footer-row__section {
+.doorway-footer-row__section {
   @apply px-0;
   @apply text-left;
   display: flex;
